# MAP

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  map.yaml.example  pyproject.toml
.github/workflows/: ci.yml
map/: cli.py  config.py
map/agents/: base.py  implementer.py  planner.py  reviewer.py  tester.py
map/comms/: base.py  telegram.py  terminal.py
map/session/: state.py
map/supervisor/: orchestrator.py  task_parser.py
map/tools/: claude_code.py  git.py
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_cli.py  test_config.py  test_orchestrator.py  test_session.py  test_task_parser.py
tests/unit/agents/: test_implementer.py  test_planner.py  test_reviewer.py  test_tester.py
tests/unit/comms/: test_router.py  test_telegram.py  test_terminal.py
tests/unit/tools/: test_claude_code.py  test_git.py
